Support modules and local java executable.